# sir_ddft

./: .gitignore  Cargo.toml  README.md
sir_ddft/: .gitignore  Cargo.toml
sir_ddft/benches/: sir_ddft_1d.rs  sir_ddft_2d.rs
sir_ddft/examples/: .gitignore  inferno_map.rs  ode.rs  plot.py  sir.rs  sir_ddft_1d.rs  sir_ddft_1d_profile.rs  sir_ddft_2d.rs  sir_ddft_2d_profile.rs  sir_diffusion_1d.rs  sir_diffusion_2d.rs  sz_ddft_2d.rs
sir_ddft/examples/common/: mod.rs  plot.rs  state.rs
sir_ddft/src/: helpers.rs  lib.rs  sir_ddft_solver_1d.rs  sir_ddft_solver_2d.rs  sir_diffusion_solver_1d.rs  sir_diffusion_solver_2d.rs  sir_solver.rs  sz_ddft_sover_2d.rs
sir_ddft/src/ode/: euler.rs  mod.rs  rkf45.rs  solver.rs
sir_ddft/src/sir/: mod.rs  parameters.rs  state_1d.rs  state_2d.rs  state_lumped.rs
sir_ddft_js/: Cargo.toml  README.md  makeDist.sh
sir_ddft_js/src/: lib.rs  parameters.rs  solver_1d.rs  solver_2d.rs  solver_lumped.rs  state.rs
sir_ddft_js/www/: index.css  index.html  index.js  serve.py  worker_common.js  worker_sir.js  worker_sir_1d.js  worker_sir_2d.js
sir_ddft_py/: Cargo.toml  README.md  makeDoc.sh  pyproject.toml
sir_ddft_py/examples/: common.py  common_1d.py  common_2d.py  plot.py  plot_totals.py  sir.py  sir_ddft_1d.py  sir_ddft_2d.py  sir_ddft_2d_scan.py  sir_diffusion_1d.py  sir_diffusion_2d.py  sz_ddft_2d.py
sir_ddft_py/examples/article/: .gitignore  Makefile  README.md  phasediagram_jobs.csv  plot_labels.py  plot_sz_phasediagram.py  plot_sz_time.py  plot_sz_totals.py  sz_ddft_phasediagram.py  sz_ddft_single.py
sir_ddft_py/src/: lib.rs  parameters.rs  solver_1d.rs  solver_2d.rs  solver_lumped.rs  state.rs
