[package]
name = "sir_ddft"
version = "1.0.1"
authors = ["Julian Jeggle <j_jegg01@uni-muenster.de>", "Raphael Wittkowski <raphael.wittkowski@uni-muenster.de>"]
edition = "2018"
license = "AGPL-3.0"
description = "A Rust implementation of the SIR-DDFT model"
repository = "https://github.com/jjegg01/sir_ddft"
keywords = ["sir_ddft", "sir", "ddft", "physics", "epidemic"]
categories = ["science"]
include = ["src/**/*.rs", "LICENSE", "README.md"]
readme = "README.md"

[[bench]]
name = "sir_ddft_1d"
path = "benches/sir_ddft_1d.rs"
harness = false

[[bench]]
name = "sir_ddft_2d"
path = "benches/sir_ddft_2d.rs"
harness = false

[dependencies]
rustfft = "^6.0"
num-complex = "^0.4"
itertools = "^0.9.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
scoped_threadpool = "^0.1.9"

[dev-dependencies]
criterion = "0.3"
plotters = { version = "^0.2.15", features = ["cairo"]}
cairo-rs = "0.8.1"
gtk = "0.8.1"
gio = "0.8.1"