[package]
name = "sir_ddft_js"
version = "1.0.0"
authors = ["Julian Jeggle <j_jegg01@uni-muenster.de>", "Raphael Wittkowski <raphael.wittkowski@uni-muenster.de>"]
edition = "2018"
license = "AGPL-3.0"
description = "A Rust implementation of the SIR-DDFT model - JS/WASM bindings"
repository = "https://github.com/jjegg01/sir_ddft"
keywords = ["sir_ddft", "sir", "ddft", "physics", "soft matter", "epidemic", "javascript", "webassembly"]
categories = ["science"]
include = ["src/**/*.rs", "www/**/*", "LICENSE", "README.md"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
sir_ddft = { path = "../sir_ddft", version = "^1.0" }
wasm-bindgen = "^0.2"
console_error_panic_hook = { version = "^0.1", optional = true }
js-sys = "^0.3"

[dev-dependencies]
wasm-bindgen-test = "^0.3"